finished index.html sketch

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <!--Falta: Slogan-->
       <h1>A Tasca do Toni</h1>
-      <p>slogan goes here</p>
+      <p><strong>slogan goes here</strong></p>
       <nav>
         <ul>
           <li><a href="./index.html">Home</a></li>
@@ -39,7 +39,8 @@
       <section id="sobre">
         <h4>Sobre Nós</h4>
         <article>
-          <p>description goes here</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin venenatis volutpat iaculis. Quisque volutpat porta gravida. Etiam vel ligula at nisl placerat suscipit. Donec nulla est, blandit sed magna nec, porttitor elementum felis. Quisque malesuada egestas eleifend. Etiam dictum sapien quis tortor hendrerit, ut auctor lacus tempor. Duis consectetur sem in nulla rutrum, ut lacinia turpis accumsan. Vivamus facilisis sem vel orci semper, in sollicitudin nisi tincidunt. Duis nulla orci, molestie et varius sit amet, rutrum nec risus. Nullam non libero eget magna bibendum dapibus. Ut in massa finibus erat dapibus volutpat ut sed diam. Cras pulvinar in turpis hendrerit dapibus. Etiam blandit nec augue sit amet hendrerit. Praesent ultricies ultricies egestas. Nullam semper faucibus molestie. Donec leo dui, aliquet a elementum quis, molestie a ante.
+          </p>
         </article>
       </section>
     </main>
