updated header, all pages

--- a/pages/takeaway.html
+++ b/pages/takeaway.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Take Away | A Tasca do Toni</title>
   </head>
 
@@ -9,7 +10,7 @@
     <header>
       <!--Falta: Slogan-->
       <h1>A Tasca do Toni</h1>
-      <p>slogan goes here</p>
+      <p><strong>slogan goes here</strong></p>
       <nav>
         <ul>
           <li><a href="../index.html">Home</a></li>
