--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Menu | A Tasca do Toni</title>
+    <title>Blog | A Tasca do Toni</title>
   </head>
 
   <body>
@@ -23,5 +23,5 @@
       </nav>
     </header>
 
-
+    
   </body>
