--- a/pages/menu.html
+++ b/pages/menu.html
@@ -23,5 +23,72 @@
       </nav>
     </header>
 
+    <main>
+      <table id="pratosdia">
+        <thead>
+          <tr>
+            <th colspan="3">Pratos do Dia ([inserir data])</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td rowspan="3">Prato 1</td>
+            <td rowspan="3">Prato 2</td>
+            <td rowspan="3">Prato 3</td>
+          </tr>          
+          <tr>
+            <td rowspan="3">Prato 4</td>
+            <td rowspan="3">Prato 5</td>
+            <td rowspan="3">Prato 6</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table id="bebidas">
+        <thead>
+          <tr>
+            <th colspan="3">Bebidas e Acompanhamentos</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="2">Imperial (25cl)</td>
+            <td>Preço</td>
+          </tr>
+          <tr>
+            <td colspan="2">Caneca de Cerveja (40cl)</td>
+            <td>Preço</td>
+          </tr>
+          <tr>
+            <td colspan="2">Sumo de Lata (33cl)</td>
+            <td>Preço</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <table id="sobremesas">
+        <thead>
+          <tr>
+            <th colspan="3">Sobremesas</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td colspan="2">Doce da Casa</td>
+            <td>Preço</td>
+          </tr>
+          <tr>
+            <td colspan="2">Pudim</td>
+            <td>Preço</td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <tr>
+            <td colspan="3"><em>Preços com IVA incluído à taxa em vigor</em></td>
+          </tr>
+        </tfoot>
+      </table>
+    </main>
+
 
   </body>
