copied footer to all pages

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -89,6 +89,13 @@
         </tfoot>
       </table>
     </main>
-
+    
+    <footer>
+      <!--contactos, horários-->
+      <section id="contactos">
+        <h5>A Tasca do Toni</h5>
+        <p>contactos e horários aqui</p>
+      </section>
+    </footer>
 
   </body>
