--- a/pages/takeaway.html
+++ b/pages/takeaway.html
@@ -23,4 +23,14 @@
       </nav>
     </header>
 
+
+
+    <footer>
+      <!--contactos, horários-->
+      <section id="contactos">
+        <h5>A Tasca do Toni</h5>
+        <p>contactos e horários aqui</p>
+      </section>
+    </footer>
+
   </body>
