--- a/pages/blog.html
+++ b/pages/blog.html
@@ -21,4 +21,14 @@
         </ul>
       </nav>
     </header>
+
+
+
+    <footer>
+      <!--contactos, horários-->
+      <section id="contactos">
+        <h5>A Tasca do Toni</h5>
+        <p>contactos e horários aqui</p>
+      </section>
+    </footer>
   </body>
