fixed submissions.html directory (takeaway page)

--- a/pages/takeaway.html
+++ b/pages/takeaway.html
@@ -26,7 +26,7 @@
       <section id="form">
         <div id="pedido">
           <h1>O que lhe apetece hoje?</h1>
-          <form action="./submissions.html" method="POST">
+          <form action="../pages/submissions.html" method="POST">
             <label for="prato-principal">Prato Principal</label>
               <br>
               <input type="text" name="prato-principal" 
