--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <!--Falta: Slogan-->
       <h1>A Tasca do Toni</h1>
-      <p><strong>slogan goes here</strong></p>
+      <p>slogan goes here</p>
       <nav>
         <ul>
           <li><a href="./index.html">Home</a></li>
