--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>A Tasca do Toni | Restaurante | Cervejaria | Lisboa</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
