add slideshow to index.html (problem: first image not loading with the page)

--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@
 
   <body>
     <header>
-      <!--Falta: Slogan-->
-      <h1>A Tasca do Toni</h1>
-      <p>slogan goes here</p>
+      <div>
+        <h1  id="nome">Nome</h1>
+      </div>
+      <div id="slogan">
+        <p>slogan goes here</p>
+      </div>
       <nav>
         <ul>
           <li><a href="./index.html">Home</a></li>
