cleanup child pages

--- a/pages/takeaway/takeaway.html
+++ b/pages/takeaway/takeaway.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Take Away | A Tasca do Toni</title>
+    <link rel="stylesheet" href="./styles.css">
   </head>
 
   <body>
     <header>
-      <!--Falta: Slogan-->
-      <h1>A Tasca do Toni</h1>
-      <p><strong>slogan goes here</strong></p>
+      <div class="title">
+        <h1  id="nome">Café Santos</h1>
+      </div>
+      <div>
+        <p class="slogan"></p>
+      </div>
       <nav>
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="../index.html#sobre">Sobre Nós</a></li>
-          <li><a href="../pages/menu.html">Menu</a></li>
-          <li><a href="../pages/takeaway.html">Takeaway</a></li>
-          <li><a href="../index.html#contactos">Contactos</a></li>
+          <li><a class="nav" href="../../index.html">Home</a></li>
+          <li><a class="nav" href="../../index.html#sobre">Sobre Nós</a></li>
+          <li><a class="nav" href="../../pages/menu.html">Menu</a></li>
+          <li><a class="nav" href="./takeaway.html">Takeaway</a></li>
+          <li><a class="nav" href="../../index.html#contactos">Contactos</a></li>
         </ul>
       </nav>
     </header>
