--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -20,7 +20,7 @@
           <li><a class="nav" href="../../index.html">Home</a></li>
           <li><a class="nav" href="../../index.html#sobre">Sobre Nós</a></li>
           <li><a class="nav" href="./menu.html">Menu</a></li>
-          <li><a class="nav" href="../../pages/takeaway/takeaway.html">Takeaway</a></li>
+          <li><a class="nav" href="../takeaway/takeaway.html">Takeaway</a></li>
           <li><a class="nav" href="../../index.html#contactos">Contactos</a></li>
         </ul>
       </nav>
