--- a/pages/takeaway/takeaway.html
+++ b/pages/takeaway/takeaway.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <title>Take Away | A Tasca do Toni</title>
+    <title>Take Away | Café Santos</title>
     <link rel="stylesheet" href="./styles.css">
   </head>
 
@@ -19,7 +19,7 @@
         <ul>
           <li><a class="nav" href="../../index.html">Home</a></li>
           <li><a class="nav" href="../../index.html#sobre">Sobre Nós</a></li>
-          <li><a class="nav" href="../../pages/menu.html">Menu</a></li>
+          <li><a class="nav" href="../menu/menu.html">Menu</a></li>
           <li><a class="nav" href="./takeaway.html">Takeaway</a></li>
           <li><a class="nav" href="../../index.html#contactos">Contactos</a></li>
         </ul>
@@ -71,15 +71,15 @@
             
             <label for="comentario">Algum pedido ou especificação adicional?</label>
             <br>
-              <textarea id="comentario" name="comentario" rows="3" cols="30">
+              <textarea id="comentario" name="comentario" rows="3" cols="100">
               </textarea> 
             <br>
             <br>
           </div>
           <div id="dados-cliente">
             <p>Dados do Cliente</p>
-              <label for="nome">Nome (primeiro e último)</label>
-                <input id="nome" name="dados-cliente" type="text" required>
+              <label for="dadosnome">Nome (primeiro e último)</label>
+                <input id="dadosnome" name="dados-cliente" type="text" required>
             <br>
               <label for="nif">NIF</label>
                 <input id="nif" name="dados-cliente" type="text" 
