--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <h5>Quem conhece, dá a conhecer.</h5>
       </div>
       <br>
-      <section class="sobre">
+      <section class="sobre" id="sobre">
         <div class="img-container">
           <div class="frame">
             <img src="./images/prato-1-1080w.jpg" alt="bela pota">
