Copy css template to menu.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
+    <!--mudar nome-->
     <title>Café Santos | Restaurante | Cervejaria | Lisboa</title>
     <script src="javascript.js"></script>
     <link rel="stylesheet" href="styles.css">
@@ -12,11 +13,11 @@
     <header>
       <nav>
         <ul>
-          <li><a class="nav subtitle" href="./index.html">Home</a></li>
-          <li><a class="nav subtitle" href=#sobre>Sobre Nós</a></li>
-          <li><a class="nav subtitle" href="./pages/menu/menu.html">Menu</a></li>
-          <li><a class="nav subtitle" href="./pages/takeaway/takeaway.html">Takeaway</a></li>
-          <li><a class="nav subtitle" href=#contactos>Contactos</a></li>
+          <li><a class="navlink" href="./index.html">Home</a></li>
+          <li><a class="navlink" href=#sobre>Sobre Nós</a></li>
+          <li><a class="navlink" href="./pages/menu/menu.html">Menu</a></li>
+          <li><a class="navlink" href="./pages/takeaway/takeaway.html">Takeaway</a></li>
+          <li><a class="navlink" href=#contactos>Contactos</a></li>
         </ul>
       </nav>
     </header>
@@ -25,6 +26,7 @@
       <section class="title">
           <div class="img-container">
             <img src="./images/pexels-photo-260922.jpg" style="width:100%" alt="salão-principal">               
+            <!--mudar nome-->
             <div class="nomecafe">CAFÉ SANTOS</div>
           </div>
         </div>
@@ -65,8 +67,8 @@
     </main>
       
     <footer>
-      <!--contactos, horários-->
-      <section id="contactos">
+      <section class= "contactos" id="contactos">
+        <!--mudar nome-->
         <h3 class="subtitle">Café Santos</h3>
         <p>contactos e horários aqui</p>
       </section>
