edit menu.html flexbox: ready for .jpg files

--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -12,34 +12,34 @@
     <header>
       <nav>
         <ul>
-          <li><a class="nav" href="../../index.html">Home</a></li>
-          <li><a class="nav" href="../../index.html#sobre">Sobre Nós</a></li>
-          <li><a class="nav" href="./menu.html">Menu</a></li>
-          <li><a class="nav" href="../takeaway/takeaway.html">Takeaway</a></li>
-          <li><a class="nav" href="../../index.html#contactos">Contactos</a></li>
+          <li><a class="navlink" href="../../index.html">Home</a></li>
+          <li><a class="navlink" href="../../index.html#sobre">Sobre Nós</a></li>
+          <li><a class="navlink" href="./menu.html">Menu</a></li>
+          <li><a class="navlink" href="../takeaway/takeaway.html">Takeaway</a></li>
+          <li><a class="navlink" href="../../index.html#contactos">Contactos</a></li>
         </ul>
       </nav>
     </header>
 
     <main>
       <div class="flex-container">
-        <table class="pratosdia">
+        <table class="pratos-dia">
           <thead>
             <tr>
               <!--inserir data de hoje: js?-->
-              <th class="menu-table-head" colspan="6">Pratos do Dia</th>
+              <th class="menu-table-head" colspan="3">Pratos do Dia</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td colspan="2">Prato 1</td>
-              <td colspan="2">Prato 2</td>
-              <td colspan="2">Prato 3</td>
+              <td>Prato 1</td>
+              <td>Prato 2</td>
+              <td>Prato 3</td>
             </tr>          
             <tr>
-              <td colspan="2">Prato 4</td>
-              <td colspan="2">Prato 5</td>
-              <td colspan="2">Prato 6</td>
+              <td>Prato 4</td>
+              <td>Prato 5</td>
+              <td>Prato 6</td>
             </tr>
           </tbody>
         </table>
@@ -47,24 +47,21 @@
         <table class="bebidas">
           <thead>
             <tr>
-              <th class="menu-table-head" colspan="6">Bebidas e Acompanhamentos</th>
+              <th class="menu-table-head" colspan="3">Bebidas e Acompanhamentos</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td colspan="2">Imperial (25cl)</td>
-              <td colspan="2"></td>
-              <td colspan="2">Preço</td>
+              <td>Imperial (25cl)</td>
+              <td>Preço</td>
             </tr>
             <tr>
-              <td colspan="2">Caneca de Cerveja (40cl)</td>
-              <td colspan="2"></td>
-              <td colspan="2">Preço</td>
+              <td>Caneca de Cerveja (40cl)</td>
+              <td>Preço</td>
             </tr>
             <tr>
-              <td colspan="2">Sumo de Lata (33cl)</td>
-              <td colspan="2"></td>
-              <td colspan="2">Preço</td>
+              <td>Sumo de Lata (33cl)</td>
+              <td>Preço</td>
             </tr>
           </tbody>
         </table>
@@ -72,19 +69,17 @@
         <table class="sobremesas">
           <thead>
             <tr>
-              <th class="menu-table-head" colspan="6">Sobremesas</th>
+              <th class="menu-table-head" colspan="3">Sobremesas</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td colspan="2">Doce da Casa</td>
-              <td colspan="2"></td>
-              <td colspan="2">Preço</td>
+              <td>Doce da Casa</td>
+              <td>Preço</td>
             </tr>
             <tr>
-              <td colspan="2">Pudim</td>
-              <td colspan="2"></td>
-              <td colspan="2">Preço</td>
+              <td>Pudim</td>
+              <td>Preço</td>
             </tr>
           </tbody>
         </table>
