--- a/pages/takeaway/takeaway.html
+++ b/pages/takeaway/takeaway.html
@@ -104,9 +104,9 @@
     </main>
 
     <footer>
-      <!--contactos, horários-->
-      <section id="contactos">
-        <h5>A Tasca do Toni</h5>
+      <section class= "contactos" id="contactos">
+        <!--mudar nome-->
+        <h3 class="subtitle">Café Santos</h3>
         <p>contactos e horários aqui</p>
       </section>
     </footer>
