add images in menu-html

--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -32,14 +32,32 @@
           </thead>
           <tbody>
             <tr>
-              <td>Prato 1</td>
-              <td>Prato 2</td>
-              <td>Prato 3</td>
+              <td>
+                <img src="./images/sopa.jpg" style="width: 100%" alt="sopa">
+                <p>Prato 1</p>
+              </td>
+              <td>
+                <img src="./images/espetada.jpeg" style="width: 100%" alt="espetada">
+                <p>Prato 2</p>
+              </td>
+              <td>
+                <img src="./images/hamburguer.jpeg" style="width: 100%" alt="hamburguer">
+                <p>Prato 3</p>
+              </td>
             </tr>          
             <tr>
-              <td>Prato 4</td>
-              <td>Prato 5</td>
-              <td>Prato 6</td>
+              <td>
+                <img src="./images/pizza.jpeg" style="width: 100%" alt="pizza">
+                <p>Prato 4</p>
+              </td>
+              <td>
+                <img src="./images/salmon.jpeg" style="width: 100%" alt="salmon">
+                <p>Prato 5</p>
+              </td>
+              <td>
+                <img src="./images/salada-2.jpeg" style="width: 100%" alt="salada">
+                <p>Prato 6</p>
+              </td>
             </tr>
           </tbody>
         </table>
