finish layout: home-page, menu

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <body>
     <header>
-      <nav>
+      <nav id="nav">
         <ul>
           <li><a class="navlink" href="./index.html">Home</a></li>
           <li><a class="navlink" href=#sobre>Sobre Nós</a></li>
-          <li><a class="navlink" href="./pages/menu/menu.html">Menu</a></li>
+          <li><a class="navlink" href="./pages/menu/menu.html">Ementa</a></li>
           <li><a class="navlink" href="./pages/takeaway/takeaway.html">Takeaway</a></li>
           <li><a class="navlink" href=#contactos>Contactos</a></li>
         </ul>
@@ -71,6 +71,7 @@
         <!--mudar nome-->
         <h3 class="subtitle">Café Santos</h3>
         <p>contactos e horários aqui</p>
+        <p><a href="#nav">Voltar ao topo</a></p>
       </section>
     </footer>
       
