--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -10,11 +10,11 @@
 
   <body>
     <header>
-      <nav>
+      <nav id="nav">
         <ul>
           <li><a class="navlink" href="../../index.html">Home</a></li>
           <li><a class="navlink" href="../../index.html#sobre">Sobre Nós</a></li>
-          <li><a class="navlink" href="./menu.html">Menu</a></li>
+          <li><a class="navlink" href="./menu.html">Ementa</a></li>
           <li><a class="navlink" href="../takeaway/takeaway.html">Takeaway</a></li>
           <li><a class="navlink" href="../../index.html#contactos">Contactos</a></li>
         </ul>
@@ -27,36 +27,36 @@
           <thead>
             <tr>
               <!--inserir data de hoje: js?-->
-              <th class="menu-table-head" colspan="3">Pratos do Dia</th>
+              <th class="menu-table-head" colspan="3">As nossas especialidades:</th>
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>
                 <img src="./images/sopa.jpg" style="width: 100%" alt="sopa">
-                <p>Prato 1</p>
+                <p>Sopa do Dia</p><p>5.00€</p>
               </td>
               <td>
                 <img src="./images/espetada.jpeg" style="width: 100%" alt="espetada">
-                <p>Prato 2</p>
+                <p>Espetada Mista</p><p>9.00€</p>
               </td>
               <td>
                 <img src="./images/hamburguer.jpeg" style="width: 100%" alt="hamburguer">
-                <p>Prato 3</p>
+                <p>Hambúrguer Especial</p><p>8.50€</p>
               </td>
             </tr>          
             <tr>
               <td>
                 <img src="./images/pizza.jpeg" style="width: 100%" alt="pizza">
-                <p>Prato 4</p>
+                <p>Pizza da Casa</p><p>12.50€</p>
               </td>
               <td>
                 <img src="./images/salmon.jpeg" style="width: 100%" alt="salmon">
-                <p>Prato 5</p>
+                <p>Salmão Grelhado</p><p>10.50€</p>
               </td>
               <td>
                 <img src="./images/salada-2.jpeg" style="width: 100%" alt="salada">
-                <p>Prato 6</p>
+                <p>Salada</p><p>8.50€</p>
               </td>
             </tr>
           </tbody>
@@ -70,16 +70,16 @@
           </thead>
           <tbody>
             <tr>
-              <td>Imperial (25cl)</td>
-              <td>Preço</td>
+              <td class="item">Imperial (25cl)</td>
+              <td class="preço">2.00€</td>
             </tr>
             <tr>
-              <td>Caneca de Cerveja (40cl)</td>
-              <td>Preço</td>
+              <td class="item">Caneca de Cerveja (40cl)</td>
+              <td class="preço">3.00€</td>
             </tr>
             <tr>
-              <td>Sumo de Lata (33cl)</td>
-              <td>Preço</td>
+              <td class="item">Sumo de Lata (33cl)</td>
+              <td class="preço">2.00€</td>
             </tr>
           </tbody>
         </table>
@@ -92,17 +92,16 @@
           </thead>
           <tbody>
             <tr>
-              <td>Doce da Casa</td>
-              <td>Preço</td>
+              <td class="item">Doce da Casa</td>
+              <td class="preço">3.00€</td>
             </tr>
             <tr>
-              <td>Pudim</td>
-              <td>Preço</td>
+              <td class="item">Pudim</td>
+              <td class="preço">3.00€</td>
             </tr>
           </tbody>
         </table>
       </div>
-      <br>
       <p class="iva"><em>Preços com IVA incluído à taxa em vigor</em></td>
     </main>
 
@@ -111,6 +110,7 @@
         <!--mudar nome-->
         <h3 class="subtitle">Café Santos</h3>
         <p>contactos e horários aqui</p>
+        <p><a href="#nav">Voltar ao topo</a></p>
       </section>
     </footer>
 
