Add imgage frames in menu.html

--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -33,29 +33,29 @@
           <tbody>
             <tr>
               <td>
-                <img src="./images/sopa.jpg" style="width: 100%" alt="sopa">
+                <img src="./images/sopa.jpg" alt="sopa">
                 <p>Sopa do Dia</p><p>5.00€</p>
               </td>
               <td>
-                <img src="./images/espetada.jpeg" style="width: 100%" alt="espetada">
+                <img src="./images/espetada.jpeg" alt="espetada">
                 <p>Espetada Mista</p><p>9.00€</p>
               </td>
               <td>
-                <img src="./images/hamburguer.jpeg" style="width: 100%" alt="hamburguer">
+                <img src="./images/hamburguer.jpeg" alt="hamburguer">
                 <p>Hambúrguer Especial</p><p>8.50€</p>
               </td>
             </tr>          
             <tr>
               <td>
-                <img src="./images/pizza.jpeg" style="width: 100%" alt="pizza">
+                <img src="./images/pizza.jpeg" alt="pizza">
                 <p>Pizza da Casa</p><p>12.50€</p>
               </td>
               <td>
-                <img src="./images/salmon.jpeg" style="width: 100%" alt="salmon">
+                <img src="./images/salmon.jpeg" alt="salmon">
                 <p>Salmão Grelhado</p><p>10.50€</p>
               </td>
               <td>
-                <img src="./images/salada-2.jpeg" style="width: 100%" alt="salada">
+                <img src="./images/salada-2.jpeg" alt="salada">
                 <p>Salada</p><p>8.50€</p>
               </td>
             </tr>
