testing srcset to fix menu.html shrinking overlaps

--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -33,7 +33,10 @@
           <tbody>
             <tr>
               <td>
-                <img src="./images/sopa.jpg" alt="sopa">
+                <img srcset="./images/sopa-150px.jpg 150w,
+                ./images/sopa.jpg 400w"
+                sizes="(max-width: 350px) 150px, 400px"
+                src="./images/sopa.jpg" alt="sopa">
                 <p>Sopa do Dia</p><p>5.00€</p>
               </td>
               <td>
