Tweak font size, colors, homepage image

--- a/index.html
+++ b/index.html
@@ -40,27 +40,17 @@
       <section class="sobre" id="sobre">
         <div class="img-container">
           <div class="frame">
-            <img src="./images/prato-1-1080w.jpg" alt="bela pota">
+            <img src="./images/about-picture.jpeg" alt="bela pota">
           </div>
         </div>
         <div class="text">
           <div class="subtitle">Sobre Nós</div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Nullam finibus justo vel dui ultricies, id maximus erat tempus.
-            Donec scelerisque condimentum libero in tincidunt.
-            Donec tempus accumsan nulla ac tempor. Donec ut condimentum eros.
-            Aenean placerat pulvinar fringilla. Cras auctor pharetra metus.
-            In ut tristique urna.
-            <br>
-            <br>
-            Aliquam vitae efficitur est, vel laoreet neque.
-            Curabitur posuere mattis lacus, sed vestibulum lorem euismod eget.
-            Pellentesque habitant morbi tristique senectus et netus et malesuada
-            fames ac turpis egestas. Nam sed sagittis justo, sit amet maximus orci.
-            Pellentesque consectetur dui nec justo posuere, maximus rhoncus ligula congue.
-            Fusce ac molestie lorem. Nullam auctor leo ut erat volutpat, vitae sollicitudin
-            tortor faucibus. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ex massa, viverra sodales cursus a, aliquet id leo. Pellentesque eget augue sed massa sagittis tincidunt nec vel nisi. Morbi eget ultrices tellus. Nunc nec sagittis nibh. Phasellus luctus ut sapien vitae lacinia. Aenean ac augue eu velit sodales molestie sed sed diam. Cras iaculis purus non nunc efficitur mollis. Sed ac tellus urna. Aliquam urna sem, varius ut erat efficitur, egestas auctor tellus. Ut hendrerit, massa a pulvinar molestie, enim mi egestas velit, ac dignissim metus felis id enim. Fusce vestibulum felis vitae arcu dapibus, eget sagittis magna mollis. Pellentesque et enim leo. Quisque hendrerit iaculis orci, at scelerisque mauris accumsan nec. Etiam massa odio, blandit id felis eget, laoreet pellentesque nibh. Morbi ullamcorper elit massa, vel rutrum erat feugiat sed.
+            <br><br>
+            Interdum et malesuada fames ac ante ipsum primis in faucibus. Nulla a massa sodales, pulvinar lacus eu, sollicitudin ligula. Maecenas in euismod dui. Morbi mollis, quam quis feugiat tincidunt, nibh justo pretium purus, sed egestas eros tellus et metus. Phasellus semper sapien nec augue rutrum tristique. Proin non arcu non nulla facilisis consequat. Praesent eu lectus sollicitudin, suscipit ante ut, elementum eros. Vivamus eu volutpat elit, facilisis auctor odio. Phasellus nisi lectus, ullamcorper a tempor ut, volutpat sed nunc. Etiam id malesuada nulla, mattis feugiat elit. Duis vulputate sapien vitae ante scelerisque hendrerit. Suspendisse lacinia scelerisque dolor, at condimentum turpis congue in. Ut id ex nec magna luctus iaculis eget consequat odio. Integer justo quam, pellentesque sit amet massa et, venenatis condimentum nisi. Mauris placerat ex id nisl imperdiet, id faucibus orci lacinia.
+            <br><br>
+            Curabitur quis posuere elit. Proin finibus enim sapien, sit amet lobortis ante blandit vitae. Suspendisse tortor felis, finibus ac feugiat eu, vehicula eu tortor. Suspendisse et velit ut justo ornare aliquet. Aliquam erat volutpat. 
           </p>
         </div>
       </section>
