css parameters for mobile on menu.html

--- a/pages/menu/menu.html
+++ b/pages/menu/menu.html
@@ -12,11 +12,11 @@
     <header>
       <nav id="nav">
         <ul>
-          <li><a class="navlink" href="../../index.html">Home</a></li>
-          <li><a class="navlink" href="../../index.html#sobre">Sobre Nós</a></li>
-          <li><a class="navlink" href="./menu.html">Ementa</a></li>
-          <li><a class="navlink" href="../takeaway/takeaway.html">Takeaway</a></li>
-          <li><a class="navlink" href="../../index.html#contactos">Contactos</a></li>
+          <li><a class="navlink" id="nav-home" href="../../index.html">Home</a></li>
+          <li><a class="navlink" id="nav-sobre" href="../../index.html#sobre">Sobre Nós</a></li>
+          <li><a class="navlink" id="nav-menu" href="./menu.html">Ementa</a></li>
+          <li><a class="navlink" id="nav-takeaway" href="../takeaway/takeaway.html">Takeaway</a></li>
+          <li><a class="navlink" id="nav-contactos" href="../../index.html#contactos">Contactos</a></li>
         </ul>
       </nav>
     </header>
