--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <header>
       <nav id="nav">
         <ul>
-          <li><a class="navlink" href="./index.html">Home</a></li>
-          <li><a class="navlink" href=#sobre>Sobre Nós</a></li>
-          <li><a class="navlink" href="./pages/menu/menu.html">Ementa</a></li>
-          <li><a class="navlink" href="./pages/takeaway/takeaway.html">Takeaway</a></li>
-          <li><a class="navlink" href=#contactos>Contactos</a></li>
+          <li><a class="navlink" id="nav-home" href="./index.html">Home</a></li>
+          <li><a class="navlink" id="nav-sobre" href=#sobre>Sobre Nós</a></li>
+          <li><a class="navlink" id="nav-menu" href="./pages/menu/menu.html">Ementa</a></li>
+          <li><a class="navlink" id="nav-takeaway" href="./pages/takeaway/takeaway.html">Takeaway</a></li>
+          <li><a class="navlink" id="nav-contactos" href=#contactos>Contactos</a></li>
         </ul>
       </nav>
     </header>
