ported css template to takeaway

--- a/pages/takeaway/takeaway.html
+++ b/pages/takeaway/takeaway.html
@@ -2,26 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Take Away | Café Santos</title>
-    <link rel="stylesheet" href="./styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--mudar nome-->
+    <title>Takeaway | Café Santos</title>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
   <body>
     <header>
-      <div class="title">
-        <h1  id="nome">Café Santos</h1>
-      </div>
-      <div>
-        <p class="slogan"></p>
-      </div>
-      <nav>
+      <nav id="nav">
         <ul>
-          <li><a class="nav" href="../../index.html">Home</a></li>
-          <li><a class="nav" href="../../index.html#sobre">Sobre Nós</a></li>
-          <li><a class="nav" href="../menu/menu.html">Menu</a></li>
-          <li><a class="nav" href="./takeaway.html">Takeaway</a></li>
-          <li><a class="nav" href="../../index.html#contactos">Contactos</a></li>
+          <li><a class="navlink" id="nav-home" href="../../index.html">Home</a></li>
+          <li><a class="navlink" id="nav-sobre" href="../../index.html#sobre">Sobre Nós</a></li>
+          <li><a class="navlink" id="nav-menu" href="../menu/menu.html">Ementa </li>
+          <li><a class="navlink" id="nav-takeaway" href="./takeaway.html">Takeaway</a></li>
+          <li><a class="navlink" id="nav-contactos" href="../../index.html#contactos">Contactos</a></li>
         </ul>
       </nav>
     </header>
