Add -back to top- in takeaway.html

--- a/pages/takeaway/takeaway.html
+++ b/pages/takeaway/takeaway.html
@@ -128,6 +128,7 @@
         <!--mudar nome-->
         <h3 class="subtitle">Café Santos</h3>
         <p>contactos e horários aqui</p>
+        <p><a href="#nav">Voltar ao topo</a></p>
       </section>
     </footer>
 
